--- a/src/components/footer/footerWidget.less
+++ b/src/components/footer/footerWidget.less
@@ -1,5 +1,32 @@
+@import url("@/styles/theme.less");
+.footer {
+  height: 80px;
+  line-height: 80px;
+  clear: both;
+  overflow: hidden;
+  background-color: #1b1b1b;
+  .footerWidget {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    font-size: 18px;
+    color: #fff;
+  }
+}
 .footerWidget {
-  height: 40px;
-  padding: 60px 0 40px;
-  font-size: 16px;
+  p {
+    float: left;
+  }
+  .fr {
+    float: right;
+    a {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 50px;
+      img {
+        display: block;
+        width: 22px;
+      }
+    }
+  }
 }
