--- a/src/components/header/headerWidget.less
+++ b/src/components/header/headerWidget.less
@@ -1,30 +1,51 @@
 @import url("@/styles/theme.less");
 .header {
-  height: 40px;
-  padding: 28px 0;
-}
-.headerWidget {
-  height: 40px;
-  line-height: 40px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%-16%;
-  background-color: @bgColor01;
-  padding: 28px 8%;
+  height: 80px;
+  line-height: 80px;
+  clear: both;
+  overflow: hidden;
+  .headerWidget {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    font-size: 18px;
+    color: #fff;
+  }
   h1 {
-    font-size: 32px;
-    float: left;
+    display: inline-block;
+    vertical-align: middle;
+    padding-right: 120px;
+    img {
+      display: block;
+      height: 40px;
+    }
+  }
+  h2 {
+    display: inline-block;
+    vertical-align: middle;
+    padding-right: 110px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 80px;
+  }
+  h3 {
+    display: inline-block;
+    vertical-align: middle;
+    opacity: 0.4;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 80px;
   }
   .fr {
-    text-align: right;
     float: right;
     a {
-      display: block;
-      padding-right: 24px;
-    }
-    h2 {
       display: inline-block;
+      vertical-align: middle;
+      padding-left: 50px;
+      img {
+        display: block;
+        width: 22px;
+      }
     }
   }
 }
