--- a/src/App.less
+++ b/src/App.less
@@ -69,4 +69,13 @@ i {
     height: 100%;
     margin-left: 0;
   }
+  div.buttom ul li {
+    // display: block;
+    width: 48%;
+    margin-left: 0;
+  }
+  div.buttom ul li img {
+    width: 80%;
+    margin: 5px auto;
+  }
 }
