--- a/src/components/footer/footerWidget.less
+++ b/src/components/footer/footerWidget.less
@@ -23,6 +23,10 @@
       display: inline-block;
       vertical-align: middle;
       padding-left: 50px;
+      transition: all 0.3s ease;
+      &:hover {
+        opacity: 0.8;
+      }
       img {
         display: block;
         width: 22px;
