--- a/src/page/home/homeContainer/homeContainer.less
+++ b/src/page/home/homeContainer/homeContainer.less
@@ -31,10 +31,11 @@
     li {
       display: inline-block;
       vertical-align: middle;
-      margin-right: 20px;
+      margin-left: 20px;
+      margin-top: 20px;
 
       &:first-child {
-        margin-right: 0;
+        margin-left: 0;
       }
       img {
         display: block;
